# bsfr

./: .env.example  .gitignore  .gitmodules  404.html  BLUESKY_SETUP.md  CNAME  README.md  _publish.sh  config.toml  config.yml  gitpod.yml  index.html  index.xml  keybase.txt  main.css  package.json  reel.html  robots.txt  sitemap.xml  test-atproto-access.js
.claude/: SEO_METADATA.md
.github/workflows/: main.yml  rsync.yml
blog/: index.html  index.xml
blog/1km-covid-viz/: index.html
blog/2015-nieman-lab-prediction/: index.html
blog/2017-04-11-the-times-sunday-times-https/: index.html
blog/2017-nieman-lab-prediction/: index.html
blog/2020-nieman-lab-prediction/: index.html
blog/2022-nieman-lab-prediction/: index.html
blog/2023-nieman-lab-prediction/: index.html
blog/2024-nieman-lab-prediction/: index.html
blog/2025-nieman-lab-prediction/: index.html
blog/announcing-digital-evidence-toolkit/: index.html
blog/brexit-machine-learning/: index.html
blog/c2pa-expert-witness-legal-training/: index.html
blog/career-diagram-2025/: index.html
blog/data-journalism-handbook-published/: index.html
blog/hello-d3-render/: index.html
categories/: index.html  index.xml
content/: _index.md  reel.html
data/: homepage.yml  opensource.yml  reel.yml  reelgrid.yml
layouts/: atom.xml  index.html  rss.xml  sitemap.xml
public/: 404.html  index.html  index.xml  sitemap.xml
reel/: index.html
static/: main.css
tags/: index.html  index.xml
tools/html-c2pa/: Cargo.toml
tools/html-c2pa/src/: main.rs
weeknotes/: index.html  index.xml
(+236 files in other folders)
