[package]
name = "html-c2pa"
version = "0.1.0"
edition = "2021"
description = "Generate C2PA sidecar manifests for HTML files"
license = "MIT"

[[bin]]
name = "html-c2pa"
path = "src/main.rs"

[dependencies]
c2pa = { version = "0.32", features = ["file_io"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
scraper = "0.17"
chrono = { version = "0.4", features = ["serde"] }
